# nuage-openstack-neutronclient

./: .gitignore  .stestr.conf  .zuul.yaml  README.rst  build_nuage_neutronclient_deb.sh  build_nuage_neutronclient_rpm.sh  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
debian/: changelog  control  copyright
devstack/: README.rst  plugin.sh  settings
devstack/ci/: gate_hook.sh  post_test_hook.sh
nuage/: netpartition.py
nuage_neutronclient/: __init__.py  _i18n.py  appdesigner.py  externalsecuritygroup.py  floatingip.py  gateway.py  net_topology.py  netpartition.py  nuage_floatingip.py  nuage_flow_classifier.py  nuage_l2bridge.py  nuage_policy_group.py  port.py  redirecttarget.py  router.py  securitygroup.py  subnet.py
nuage_neutronclient/osc/: plugin.py
nuage_neutronclient/osc/tests/: utils.py
nuage_neutronclient/osc/tests/functional/: test_floating_ip.py  test_network.py  test_nuage_floatingip.py  test_nuage_gateway.py  test_nuage_l2_bridge.py  test_nuage_netpartition.py  test_nuage_policy_group.py  test_nuage_project_netpartition_mapping.py  test_nuage_redirect_target.py  test_nuage_router.py  test_nuage_switchport_mapping.py  test_port.py  test_router.py  test_security_group.py  test_segment.py  test_subnet.py
nuage_neutronclient/osc/v2/: client.py  floating_ip.py  network.py  network_segment.py  nuage_floatingip.py  nuage_gateway.py  nuage_gateway_port.py  nuage_gateway_port_vlan.py  nuage_gateway_vport.py  nuage_l2bridge.py  nuage_netpartition.py  nuage_policy_group.py  nuage_project_netpartition_mapping.py  nuage_redirect_target.py  nuage_switchport_binding.py  nuage_switchport_mapping.py  port.py  router.py  security_group.py  subnet.py  utils.py
playbooks/: post.yaml  pre.yaml  run.yaml
