[metadata]
name = nuage-openstack-neutronclient
summary = "Openstack Neutron Client for Nuage Networks"
description-file =
    README.rst
author = Alcatel-Lucent USA Inc
author-email = info@nuagenetworks.net
home-page = http://www.nuagenetworks.net
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    nuage_neutronclient

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[entry_points]
neutronclient.extension =
   gateway = nuage_neutronclient.gateway
   appdesigner = nuage_neutronclient.appdesigner
   redirecttarget = nuage_neutronclient.redirecttarget
   externalsecuritygroup = nuage_neutronclient.externalsecuritygroup
   floatingip = nuage_neutronclient.floatingip
   netpartition = nuage_neutronclient.netpartition
   nuagefloatingip = nuage_neutronclient.nuage_floatingip
   nuagepolicygroup = nuage_neutronclient.nuage_policy_group
   port = nuage_neutronclient.port
