[metadata]
name = nuage-openstack-neutronclient
summary = "Openstack Neutron Client for Nuage Networks"
description-file =
    README.rst
author = Alcatel-Lucent USA Inc
author-email = info@nuagenetworks.net
home-page = http://www.nuagenetworks.net
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    nuage_neutronclient

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[entry_points]
neutronclient.extension =
   gateway = nuage_neutronclient.gateway
   redirecttarget = nuage_neutronclient.redirecttarget
   externalsecuritygroup = nuage_neutronclient.externalsecuritygroup
   floatingip = nuage_neutronclient.floatingip
   netpartition = nuage_neutronclient.netpartition
   nuagefloatingip = nuage_neutronclient.nuage_floatingip
   nuagepolicygroup = nuage_neutronclient.nuage_policy_group
   port = nuage_neutronclient.port
   subnet = nuage_neutronclient.subnet
   net_topology = nuage_neutronclient.net_topology
   nuage_flow_classifier = nuage_neutronclient.nuage_flow_classifier
   security_group = nuage_neutronclient.securitygroup
   router = nuage_neutronclient.router
   nuage_l2bridge = nuage_neutronclient.nuage_l2bridge