[metadata]
name = nuage-openstack-neutronclient
summary = "Openstack Neutron Client for Nuage Networks"
description-file =
    README.rst
author = Alcatel-Lucent USA Inc
author-email = info@nuagenetworks.net
home-page = http://www.nuagenetworks.net
license = ASL 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    nuage_neutronclient

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[entry_points]
openstack.cli.extension =
    nuageclient = nuage_neutronclient.osc.plugin

openstack.nuageclient.v2 =
    floating_ip_create = nuage_neutronclient.osc.v2.floating_ip:CreateFloatingIP
    floating_ip_set = nuage_neutronclient.osc.v2.floating_ip:SetFloatingIP
    floating_ip_show = nuage_neutronclient.osc.v2.floating_ip:ShowFloatingIP
    network_create = nuage_neutronclient.osc.v2.network:CreateNetwork
    network_show = nuage_neutronclient.osc.v2.network:ShowNetwork
    nuage_floating_ip_list = nuage_neutronclient.osc.v2.nuage_floatingip:ListNuageFloatingIP
    nuage_floating_ip_show = nuage_neutronclient.osc.v2.nuage_floatingip:ShowNuageFloatingIP
    nuage_l2bridge_create = nuage_neutronclient.osc.v2.nuage_l2bridge:CreateNuageL2Bridge
    nuage_l2bridge_delete = nuage_neutronclient.osc.v2.nuage_l2bridge:DeleteNuageL2Bridge
    nuage_l2bridge_list = nuage_neutronclient.osc.v2.nuage_l2bridge:ListNuageL2Bridge
    nuage_l2bridge_set = nuage_neutronclient.osc.v2.nuage_l2bridge:SetNuageL2Bridge
    nuage_l2bridge_show = nuage_neutronclient.osc.v2.nuage_l2bridge:ShowNuageL2Bridge
    nuage_netpartition_create = nuage_neutronclient.osc.v2.nuage_netpartition:CreateNuageNetpartition
    nuage_netpartition_delete = nuage_neutronclient.osc.v2.nuage_netpartition:DeleteNuageNetpartition
    nuage_netpartition_list = nuage_neutronclient.osc.v2.nuage_netpartition:ListNuageNetpartition
    nuage_netpartition_show = nuage_neutronclient.osc.v2.nuage_netpartition:ShowNuageNetPartition
    nuage_netpartition_add_project = nuage_neutronclient.osc.v2.nuage_project_netpartition_mapping:CreateNuageProjectNetpartitionMapping
    nuage_netpartition_remove_project = nuage_neutronclient.osc.v2.nuage_project_netpartition_mapping:DeleteNuageProjectNetpartitionMapping
    nuage_netpartition_project_list = nuage_neutronclient.osc.v2.nuage_project_netpartition_mapping:ListNuageProjectNetpartitionMapping
    nuage_netpartition_project_show = nuage_neutronclient.osc.v2.nuage_project_netpartition_mapping:ShowNuageProjectNetpartitionMapping
    nuage_policy_group_list = nuage_neutronclient.osc.v2.nuage_policy_group:ListNuagePolicyGroup
    nuage_policy_group_show = nuage_neutronclient.osc.v2.nuage_policy_group:ShowNuagePolicyGroup
    nuage_switchport_binding_list = nuage_neutronclient.osc.v2.nuage_switchport_binding:ListNuageSwitchportBinding
    nuage_switchport_binding_show = nuage_neutronclient.osc.v2.nuage_switchport_binding:ShowNuageSwitchportBinding
    nuage_switchport_mapping_create = nuage_neutronclient.osc.v2.nuage_switchport_mapping:CreateNuageSwitchportMapping
    nuage_switchport_mapping_delete = nuage_neutronclient.osc.v2.nuage_switchport_mapping:DeleteNuageSwitchportMapping
    nuage_switchport_mapping_list = nuage_neutronclient.osc.v2.nuage_switchport_mapping:ListNuageSwitchportMapping
    nuage_switchport_mapping_set = nuage_neutronclient.osc.v2.nuage_switchport_mapping:SetNuageSwitchportMapping
    nuage_switchport_mapping_show = nuage_neutronclient.osc.v2.nuage_switchport_mapping:ShowNuageSwitchportMapping
    port_create = nuage_neutronclient.osc.v2.port:CreatePort
    port_set = nuage_neutronclient.osc.v2.port:SetPort
    port_show = nuage_neutronclient.osc.v2.port:ShowPort
    port_unset = nuage_neutronclient.osc.v2.port:UnsetPort
    router_create = nuage_neutronclient.osc.v2.router:CreateRouter
    router_set = nuage_neutronclient.osc.v2.router:SetRouter
    router_show = nuage_neutronclient.osc.v2.router:ShowRouter
    security_group_create = nuage_neutronclient.osc.v2.security_group:CreateSecurityGroup
    security_group_set = nuage_neutronclient.osc.v2.security_group:SetSecurityGroup
    security_group_show = nuage_neutronclient.osc.v2.security_group:ShowSecurityGroup
    subnet_create = nuage_neutronclient.osc.v2.subnet:CreateSubnet
    subnet_set = nuage_neutronclient.osc.v2.subnet:SetSubnet
    subnet_show = nuage_neutronclient.osc.v2.subnet:ShowSubnet

neutronclient.extension =
   gateway = nuage_neutronclient.gateway
   redirecttarget = nuage_neutronclient.redirecttarget
   externalsecuritygroup = nuage_neutronclient.externalsecuritygroup
   floatingip = nuage_neutronclient.floatingip
   netpartition = nuage_neutronclient.netpartition
   nuagefloatingip = nuage_neutronclient.nuage_floatingip
   nuagepolicygroup = nuage_neutronclient.nuage_policy_group
   port = nuage_neutronclient.port
   subnet = nuage_neutronclient.subnet
   net_topology = nuage_neutronclient.net_topology
   nuage_flow_classifier = nuage_neutronclient.nuage_flow_classifier
   router = nuage_neutronclient.router
   security_group = nuage_neutronclient.securitygroup
   nuage_l2bridge = nuage_neutronclient.nuage_l2bridge
